<resources>
    <string name="app_name">AppBazyDanych</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="only_search">Only Search</string>
    <string name="nameRegistration">Name</string>
    <string name="surnameRegistration">Surname</string>
    <string name="natioanlityRegistration">Natioanlity</string>
    <string name="emailRegistration">Email</string>
    <string name="passwordRegistration">Password</string>
    <string name="birthdate_dd_mm_yyyyRegistration">Birthdate(DD/MM/YYYY)</string>
    <string name="maleRegistration">Male</string>
    <string name="femaleRegistration">Female</string>
    <string name="register_nowButton">Register Now</string>
    <string name="find_flight">Find Flight</string>
    <string name="destination">DESTINATION</string>
    <string name="source">SOURCE</string>
    <string name="todo">TODO</string>
    <string name="price">Price</string>
    <string name="ticketdescription">TicketDescription</string>
    <string name="back">Back</string>
    <string name="first_on_the_board">First on the Board</string>
    <string name="pay">Pay</string>
    <string name="additional_luggage">Additional Luggage</string>
    <string name="skad">Skad</string>
    <string name="dokad">Dokad</string>
    <string name="data_odlotu">data odlotu</string>
    <string name="czas_lotu">czas lotu</string>
    <string name="more">More</string>
    <string name="cena">Cena</string>
    <string name="more_info_1_dadadaada">more info 1:dadadaada</string>
    <string name="buy">BUY</string>
    <string name="more_info_2_datatatta">more info 2:datatatta</string>
    <string name="priceBuy">Price :</string>
    <string name="todoBuy">TODOBuy</string>
    <string name="check_in">CHECK IN</string>
    <string name="check_inin">CHECK IN</string>
    <string name="document_id">Document ID</string>
    <string name="document">Document</string>
    <string name="confirm">Confirm</string>
    <string name="surname">Surname</string>
    <string name="nameid">NameID</string>
    <string name="nameoyher">Nameoyther</string>
    <string name="surnname">Surnname</string>
    <string name="results">RESULTS</string>
    <string name="_0_0">0.0</string>
    <string name="pricebuy">Price :</string>

    <string name="theme_mail">Verification Main</string>
    <string name="sender_mail">Registration in Application</string>
    <string name="content_mail"> This is verification message.</string>
</resources>
