<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="160">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="213dp"
            android:layout_height="77dp"
            android:layout_weight="55"
            android:gravity="center"
            android:orientation="vertical"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sourceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="5sp"
                    android:paddingRight="7dp"
                    android:text="@string/skad"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/destinationTextView"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:gravity="start"
                    android:text="@string/dokad"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="3dp"
                    android:text="@string/data_odlotu" />

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="end"
                    android:text="@string/czas_lotu"
                    android:textAlignment="gravity"
                    android:textColor="@android:color/holo_red_dark" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/moreButtonCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/moreTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:text="@string/more"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="italic"
                    android:typeface="sans" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <TextView
            android:id="@+id/priceListTicketTextView"
            android:layout_width="89dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="15"
            android:paddingTop="20dp"
            android:text="@string/cena"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic" />

        <android.support.v7.widget.CardView
            android:id="@+id/buyfoundedCardView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="7dp"
            android:layout_weight="30"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:id="@+id/buyButtonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="serif"
                    android:text="@string/buy"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/moreInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/moreclasaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/more_info_1_dadadaada" />

        <TextView
            android:id="@+id/moreinfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/more_info_2_datatatta" />
    </LinearLayout>

</LinearLayout>