<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".BuyActivity">

    <TextView
        android:id="@+id/ticketDescriptionTextView"
        android:layout_width="298dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="33dp"
        android:text="@string/ticketdescription"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="75dp" />

    <TextView
        android:id="@+id/totalPriceBuyTextView"
        android:layout_width="126dp"
        android:layout_height="32dp"
        android:layout_alignTop="@+id/TextView1010"
        android:layout_toEndOf="@+id/TextView1010"
        android:gravity="end"
        android:paddingEnd="10dp"
        android:paddingLeft="@dimen/default_gap"
        android:paddingRight="10dp"
        android:paddingStart="@dimen/default_gap"
        android:text="@string/_0_0"
        android:textAlignment="gravity"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="279dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/backbuyCardView"
        android:layout_width="152dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/PayCardView"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-83dp"
        app:cardBackgroundColor="@color/cardview_shadow_start_color"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="179dp"
            android:layout_height="66dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/backButton"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:text="@string/back"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="318dp"
        android:layout_height="211dp"
        android:layout_alignLeft="@+id/ticketDescriptionTextView"
        android:layout_alignStart="@+id/ticketDescriptionTextView"
        android:layout_below="@+id/ticketDescriptionTextView"
        android:layout_marginLeft="-16dp"
        android:layout_marginStart="-16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/firstOnBoardCheckBox"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/first_on_the_board" />

            <CheckBox
                android:id="@+id/additionalLuggageCheckBox"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/firstOnBoardCheckBox"
                android:layout_marginTop="66dp"
                android:text="@string/additional_luggage" />

            <Spinner
                android:id="@+id/luggageSpinner"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="14dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/TextView1010"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="182dp"
        android:layout_marginStart="45dp"
        android:fontFamily="monospace"
        android:text="@string/pricebuy"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />


    <android.support.v7.widget.CardView
        android:id="@+id/PayCardView"
        android:layout_width="154dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="82dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="30dp"
        android:layout_alignRight="@+id/ticketDescriptionTextView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/boughtButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="sans-serif"
                android:text="@string/pay"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>