<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlomain"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:singleLine="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_action_login"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:drawableLeft="@drawable/ic_action_login" />

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/UsernameEditText"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:drawableLeft="@drawable/ic_action_password"
        tools:ignore="RtlCompat" />

    <android.support.v7.widget.CardView
        android:id="@+id/LoginCardView"
        android:layout_width="306dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="189dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginButtonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/RegisterCardView"
        android:layout_width="265dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="106dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/RegisterTextView"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/SearchCardView"
        android:layout_width="273dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:cardBackgroundColor="@android:color/holo_blue_light"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/SearchTextView"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="69dp"
                android:text="@string/only_search"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>