<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlomain"
    tools:context=".CheckInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="259dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:text="@string/check_inin"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <android.support.v7.widget.CardView
        android:id="@+id/checkInCardView"
        android:layout_width="370dp"
        android:layout_height="409dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@color/common_google_signin_btn_text_light_default"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="446dp"
            android:layout_height="424dp">

            <LinearLayout
                android:layout_width="322dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="81dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/document_id"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/userDocEditText"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/document"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="237dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Name"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/confirmUserNameeditText"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="276dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="140dp"
                android:layout_marginLeft="57dp"
                android:layout_marginStart="57dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/surnname"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/confirmUserSurnameEditText"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/surname"
                    android:singleLine="true"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>



            <android.support.v7.widget.CardView
                android:id="@+id/confirmCheckInButton"
                android:layout_width="179dp"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="66dp"
                android:layout_marginEnd="90dp"
                android:background="@color/colorPrimary"
                app:cardBackgroundColor="@android:color/holo_blue_dark"
                app:cardCornerRadius="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="monospace"
                        android:text="@string/confirm"
                        android:textColor="@android:color/background_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>